added resource support in transport lvl (get resources and "update", "delete" notifications)